<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.timerapp.ui.presetTimerList.PresetTimerListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/standard_margin">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> viewModel.navigateToTimerList()}"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/timer_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:hint="@string/timer_name"
            app:layout_constraintEnd_toStartOf="@+id/start_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_btn">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_timer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.currentTimerName}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                tools:text="基本情報技術者午前試験" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/icon_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:onClick="@{() -> viewModel.navigateToTimer()}"
            app:backgroundTint="#ffffff"
            app:borderWidth="0dp"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/timer_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_arrow"
            app:tint="#111111" />

        <TextView
            android:id="@+id/setting_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/setting_margin"
            android:text="@string/setting_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer_name_layout" />

        <TextView
            android:id="@+id/setting_sound_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/setting_sound"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_title" />

        <Spinner
            android:id="@+id/sounds_spinner"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@{viewModel.soundTypes}"
            android:onItemSelected="@{(parent, view, position, id) -> viewModel.onItemSelectedNumber(position)}"
            android:selection="@={viewModel.selectedPosition}"
            app:layout_constraintBaseline_toBaselineOf="@+id/setting_sound_title"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_update" />

        <Button
            android:id="@+id/save_update"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin"
            android:layout_marginEnd="@dimen/btn_margin"
            android:onClick="@{() -> viewModel.updateSettingTimer()}"
            android:text="@string/setting_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sounds_spinner" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/preset_timer_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/setting_margin"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/icon_margin"
            android:layout_marginBottom="@dimen/icon_margin"
            android:backgroundTint="@color/white"
            android:elevation="10dp"
            android:onClick="@{() -> viewModel.navigateToDeletePresetTimer()}"
            app:borderWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_list"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/secondaryColor" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/initial_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin"
            android:visibility="@{viewModel.isInitial() ? View.VISIBLE : View.GONE}"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/card_margin"
                android:text="@string/initial_set_preset"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>