...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="timer"
            type="com.example.timerapp.database.Timer" />

        <variable
            name="clickListener"
            type="com.example.timerapp.adapter.TimerListListener" />

...
                        <TextView
                            android:id="@+id/detail_total_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                            app:totalTime="@{timer.total}"
                            tools:text="150分"/>

                        <ImageView
                            android:id="@+id/detail_notification_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/card_margin"
...
